# python-project-52

./: .gitignore  Makefile  README.md  conftest.py  db.sqlite3  manage.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: build.yml
hexlet_code/: Makefile
hexlet_code/hexlet_code/: asgi.py  settings.py  urls.py  wsgi.py
hexlet_code/task_manager/: .gitignore  db.sqlite3  requirements.txt  urls.py
labels/: admin.py  forms.py  mixins.py  models.py  test_views.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
python_project_52.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
statuses/: models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/: base.html
task_manager/: Makefile  mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: statuses.json
task_manager/hexlet_code/: settings.py
task_manager/labels/: admin.py  forms.py  mixins.py  models.py  test_views.py  tests.py  urls.py  views.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  home.html
task_manager/tests/: fixtures.json
task_manager/users/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/userss/: models.py  views.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py
tasks/templates/: tasks_list.html
templates/: base.html  index.html
templates/labels/: label_delete.html  label_form.html
templates/tasks/: task_confirm_delete.html  task_form.html  tasks_list.html
users/: forms.py  models.py  tests.py  urls.py  views.py
(+56 files in other folders)
