[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.3",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "dj-database-url>=3.0.0",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.11.9",
    "django-bootstrap5>=25.1",
    "whitenoise>=6.9.0",
    "django-filter>=24.2",
    "rollbar>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["task_manager"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.html", "*.css", "*.js", "*.png", "*.jpg", "*.jpeg", "*.gif", "*.svg"]

