

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.3",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "dj-database-url>=3.0.0",
    "psycopg2-binary>=2.9.10",
    "django-bootstrap5>=25.1",
    "whitenoise>=6.9.0",
    "django-filter>=24.2",
    "rollbar>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "coverage>=7.10.2",
]

[tool.setuptools]
packages = [
    "task_manager",
    "users",
    "statuses",
    "labels",
    "tasks",
]

[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["task_manager"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.html", "*.css", "*.js", "*.png", "*.jpg", "*.jpeg", "*.gif", "*.svg"]